fix layout bug

--- a/web/src/app/information/information.component.scss
+++ b/web/src/app/information/information.component.scss
@@ -10,6 +10,7 @@
 .intro {
   display: table;
   width: 100%;
+  position: relative;
 }
 
 .sjsu {
@@ -23,6 +24,8 @@
   width: 70%;
   padding: 10px;
   font-size: large;
+  position: absolute;
+  top: 0;
 }
 
 .member-group {
@@ -39,7 +42,9 @@
   margin-right: 1.5%;
   margin-left: 1.5%;
   cursor: pointer;
-
+  height: 350px;
+  position: relative;
+  background-color: whitesmoke;
   transform-style: preserve-3d;
   transition: 1s;
 }
@@ -51,12 +56,16 @@
 .mem-info {
   transform: rotateY(180deg);
   backface-visibility: hidden;
-  position: relative;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .mem-img {
   transform: rotateY(0deg);
   backface-visibility: hidden;
+  position: absolute;
+  width: 80%;
+  left: 10%;
 }
 
 img {
